Fix item alignments in the navbar

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -21,9 +21,14 @@ nav {
   }
 
   h1.navbar-brand {
+    margin-right: 0rem;
     margin-left: 1rem;
     padding-top: 0.15rem;
     margin-bottom: 0 !important;
+    max-width: 45%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   .nav-search {
@@ -41,7 +46,7 @@ nav {
 
   .navbar-nav .nav-item.float-xs-right + .nav-item.float-xs-right {
     margin-left: 0;
-    margin-right: 1rem;
+    margin-right: .7rem;
   }
 }
 
